# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: linter.yml
page_analyzer/: app.py  classes.py  utils.py
page_analyzer/templates/: index.html  layout.html  urls.html  website.html
