[project]
name = "hexlet-code"
version = "0.1.0"
description = "Analyze web pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "validators>=0.35.0",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]
